--- a/roles/kolla_deploy/tasks/odl-latest-override.yml
+++ b/roles/kolla_deploy/tasks/odl-latest-override.yml
@@ -16,3 +16,11 @@
     dest: "/usr/share/kolla-ansible/ansible/roles/opendaylight/templates/jetty.xml.j2"
     src: "./files/odl-jetty.xml.j2"
   
+- name: enable QBGP 
+  become: True
+  lininefile:
+    dest:  /usr/share/kolla-ansible/ansible/roles/opendaylight/templates/custom.properties.j2
+    line: "{{ item }}"
+  with_items:
+    - "vpnservice.bgpspeaker.host.name = 127.0.0.1"
+    - "vpnservice.bgpspeaker.thrift.port = 7644"
