frozen pip versions + tmp directory access fix

--- a/roles/kolla_deploy/tasks/odl-latest-override.yml
+++ b/roles/kolla_deploy/tasks/odl-latest-override.yml
@@ -18,7 +18,7 @@
   
 - name: enable QBGP 
   become: True
-  lininefile:
+  lineinfile:
     dest:  /usr/share/kolla-ansible/ansible/roles/opendaylight/templates/custom.properties.j2
     line: "{{ item }}"
   with_items:
