--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -51,7 +51,7 @@ globals_override:
   enable_redis: "{{ enable_tacker | bool }}"
   enable_aodh: "{{ enable_tacker | bool }}"
   enable_ceilometer: "{{ enable_tacker | bool }}"
-  enable_gnocchi: "{{ enable_ceilometer | bool }}"
+  enable_gnocchi: "{{ enable_tacker | bool }}"
 
 #######################
 # Inventory overrides #
