--- a/roles/kolla_bootstrap/tasks/create.yml
+++ b/roles/kolla_bootstrap/tasks/create.yml
@@ -4,6 +4,7 @@
 - name: Disable SELinus
   selinux:
     state: disabled
+  when: ansible_distribution|lower == "centos"
 
 - name: Add epel repository
   yum_repository:
@@ -11,12 +12,21 @@
     description: EPEL YUM repo
     baseurl: https://download.fedoraproject.org/pub/epel/$releasever/$basearch/
     gpgcheck: no
+  when: ansible_distribution|lower == "centos"
 
 - name: Install dependencies
   yum:
     name: "{{ item }}"
     update_cache: yes
   with_items: "{{ yum_packages }}"
+  when: ansible_distribution|lower == "centos"
+
+- name: Install dependencies (ubuntu)
+  apt:
+    name: "{{ item }}"
+  with_items: "{{ apt_packages }}"
+  when: ansible_distribution|lower == "ubuntu"
+
 
 - include: install_docker.yml
 
