--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ bcrypt==3.1.3
 certifi==2017.7.27.1
 cffi==1.10.0
 chardet==3.0.4
-cryptography==2.0.3
+cryptography>=2.3
 docker==2.5.1
 docker-pycreds==0.2.1
 enum34==1.1.6
@@ -19,7 +19,7 @@ libvirt-python==3.7.0
 lxml==3.8.0
 MarkupSafe==1.0
 netaddr==0.7.19
-paramiko==2.2.1
+paramiko>=2.2.4
 ply==3.9
 pyasn1==0.3.3
 pycparser==2.18
@@ -27,11 +27,11 @@ pycrypto==2.6.1
 pygobject==3.24.1
 pyliblzma==0.5.3
 PyNaCl==1.1.2
-pyOpenSSL==16.2.0
+pyopenssl>=17.5.0
 PySocks==1.5.7
 PyYAML==3.12
-requests==2.18.4
+requests>=2.20.0
 rpm-python==4.13.0.1
 six==1.10.0
-urllib3==1.22
+urllib3>=1.23
 websocket-client==0.44.0
